Java 21: The revolution of virtual threads - A Deep dive - Christian Woerz - CPH DevFest 2024