@@ -7,7 +7,9 @@ plugins {
 
 group = 'org.study'
 version = '0.0.1-SNAPSHOT'
-
+tasks.withType(JavaCompile) { options.compilerArgs += "--enable-preview" }
+tasks . withType(Test) { jvmArgs += "--enable-preview" }
+tasks . withType(JavaExec) { jvmArgs += "--enable-preview" }
 
 
 java {
